--- a/files/notebooks/10X-scanpy/scanpy.ipynb
+++ b/files/notebooks/10X-scanpy/scanpy.ipynb
@@ -1630,9 +1630,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "scanpy-env",
+   "display_name": "Python [conda env:scanpy-env]",
    "language": "python",
-   "name": "scanpy-env"
+   "name": "conda-env-scanpy-env-py"
   },
   "language_info": {
    "codemirror_mode": {
