update to the newest version

--- a/files/notebooks/10X-scanpy/scanpy.ipynb
+++ b/files/notebooks/10X-scanpy/scanpy.ipynb
@@ -1564,9 +1564,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:scanpy-env]",
+   "display_name": "Python [conda env:conda]",
    "language": "python",
-   "name": "conda-env-scanpy-env-py"
+   "name": "conda-env-conda-py"
   },
   "language_info": {
    "codemirror_mode": {
