--- a/files/notebooks/10X-scanpy.ipynb
+++ b/files/notebooks/10X-scanpy.ipynb
@@ -66,7 +66,7 @@
     }
    ],
    "source": [
-    "path = '../../data/pbmc3k_filtered_gene_bc_matrices/hg19/'\n",
+    "path = '../data/pbmc3k_filtered_gene_bc_matrices/hg19/'\n",
     "adata = sc.read(path + 'matrix.mtx', cache=True).T  # transpose the data\n",
     "adata.var_names = pd.read_csv(path + 'genes.tsv', header=None, sep='\\t')[1]\n",
     "adata.obs_names = pd.read_csv(path + 'barcodes.tsv', header=None)[0]"
