--- a/files/notebooks/10X-scanpy.ipynb
+++ b/files/notebooks/10X-scanpy.ipynb
@@ -1563,9 +1563,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:conda]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-conda-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1577,7 +1577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
