--- a/files/notebooks/bbknn-pancreas.ipynb
+++ b/files/notebooks/bbknn-pancreas.ipynb
@@ -852,9 +852,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:conda]",
+   "display_name": "python3",
    "language": "python",
-   "name": "conda-env-conda-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -866,7 +866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
