--- a/files/notebooks/10X-batch-correction-bbknn-scanorama.ipynb
+++ b/files/notebooks/10X-batch-correction-bbknn-scanorama.ipynb
@@ -11,7 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Jupyter notebook is a template notebook for batch correction of 10X data using [BBKNN](https://github.com/Teichlab/bbknn) and [scanorama](http://cb.csail.mit.edu/cb/scanorama) tools."
+    "This Jupyter notebook is a template notebook for batch correction of 10X data using [BBKNN](https://github.com/Teichlab/bbknn) and [scanorama](http://cb.csail.mit.edu/cb/scanorama) tools.\n",
+    "\n",
+    "Some of the batch correction tools correct the expression matrix, however some of the tools only perform correction in the low dimensional space:\n",
+    "* BBKNN --> corrects the PCA graph\n",
+    "* scanorama --> corrects the expression matrix"
    ]
   },
   {
@@ -50,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load datasets\n",
+    "## Datasets\n",
     "\n",
     "In this notebook will use 3 publicly available 10X datasets:\n",
     "- [1k PBMCs from a Healthy Donor (v2 chemistry)](https://support.10xgenomics.com/single-cell-gene-expression/datasets/3.0.0/pbmc_1k_v2)\n",
